--- a/img_features.ipynb
+++ b/img_features.ipynb
@@ -25,7 +25,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run class_def.ipynb"
+    "%run class_ImageSearch.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5732384",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time"
    ]
   },
   {
@@ -39,59 +49,70 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "23bd4cc0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###############################################################################\n",
+    "# initialize\n",
+    "###############################################################################\n",
+    "im_search=ImageSearch(dataset=Dataset())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "ac49f7f8",
    "metadata": {
     "scrolled": false
    },
    "outputs": [],
    "source": [
-    "###############################################################################\n",
-    "# initialize\n",
-    "###############################################################################\n",
-    "d=Dataset()\n",
-    "\n",
+    "'''\n",
     "###############################################################################\n",
     "# time each type measure singly\n",
     "###############################################################################\n",
     "st=time.time()\n",
-    "sim_raw_do_fsim = d.img_similarity_all(loc=3,do_fsim=True) # 1091.9723105430603\n",
+    "sim_raw_do_fsim = im_search.img_similarity_all(loc=3,do_fsim=True) # 1091.9723105430603\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_issm = d.img_similarity_all(loc=3,do_issm=True) # 43.62554740905762\n",
+    "sim_raw_do_issm = im_search.img_similarity_all(loc=3,do_issm=True) # 43.62554740905762\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_psnr = d.img_similarity_all(loc=3,do_psnr=True) # 10.773506164550781\n",
+    "sim_raw_do_psnr = im_search.img_similarity_all(loc=3,do_psnr=True) # 10.773506164550781\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_rmse = d.img_similarity_all(loc=3,do_rmse=True) # 14.554333209991455\n",
+    "sim_raw_do_rmse = im_search.img_similarity_all(loc=3,do_rmse=True) # 14.554333209991455\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_sam = d.img_similarity_all(loc=3,do_sam=True) # 16.528496980667114\n",
+    "sim_raw_do_sam = im_search.img_similarity_all(loc=3,do_sam=True) # 16.528496980667114\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_sre = d.img_similarity_all(loc=3,do_sre=True) # 12.952892541885376\n",
+    "sim_raw_do_sre = im_search.img_similarity_all(loc=3,do_sre=True) # 12.952892541885376\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_ssim = d.img_similarity_all(loc=3,do_ssim=True) # 38.041083097457886\n",
+    "sim_raw_do_ssim = im_search.img_similarity_all(loc=3,do_ssim=True) # 38.041083097457886\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_raw_do_uiq = d.img_similarity_all(loc=3,do_uiq=True)\n",
+    "sim_raw_do_uiq = im_search.img_similarity_all(loc=3,do_uiq=True)\n",
     "et=time.time()\n",
-    "print(et-st)"
+    "print(et-st)\n",
+    "'''\n",
+    "None"
    ]
   },
   {
@@ -112,30 +133,25 @@
    "outputs": [],
    "source": [
     "###############################################################################\n",
-    "# initialize\n",
-    "###############################################################################\n",
-    "d=Dataset()\n",
-    "\n",
-    "###############################################################################\n",
     "# time fastest couple of measures\n",
     "###############################################################################\n",
     "st=time.time()\n",
-    "sim_raw = d.img_similarity_all(loc=3) # 83.10340213775635\n",
+    "sim_raw = im_search.img_similarity_all(loc=3) # 83.10340213775635\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_blur = d.img_similarity_all(loc=3,blur=True) # 80.66669917106628\n",
+    "sim_blur = im_search.img_similarity_all(loc=3,blur=True) # 80.66669917106628\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_grayscale = d.img_similarity_all(loc=3,grayscale=True,plot_tgt=True) # 113.59069466590881\n",
+    "sim_grayscale = im_search.img_similarity_all(loc=3,grayscale=True,plot_tgt=True) # 113.59069466590881\n",
     "et=time.time()\n",
     "print(et-st)\n",
     "\n",
     "st=time.time()\n",
-    "sim_grayscale_blur = d.img_similarity_all(loc=3,grayscale=True,blur=True) # 74.6272337436676\n",
+    "sim_grayscale_blur = im_search.img_similarity_all(loc=3,grayscale=True,blur=True) # 74.6272337436676\n",
     "et=time.time()\n",
     "print(et-st)"
    ]
@@ -151,41 +167,41 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "201ba7f7",
+   "id": "2ec35101",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.img_similarity_plot(sim_raw)"
+    "im_search.img_similarity_plot(sim_raw)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0adc3d73",
+   "id": "7d56b169",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.img_similarity_plot(sim_blur)"
+    "im_search.img_similarity_plot(sim_blur)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa75a15b",
+   "id": "00a1c837",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.img_similarity_plot(sim_grayscale)"
+    "im_search.img_similarity_plot(sim_grayscale)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e68e1e5",
+   "id": "02d07a67",
    "metadata": {},
    "outputs": [],
    "source": [
-    "d.img_similarity_plot(sim_grayscale_blur)"
+    "im_search.img_similarity_plot(sim_grayscale_blur)"
    ]
   },
   {
@@ -203,7 +219,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[d.get_product_picture(loc=x) for x in sim_grayscale_blur['psnr'].sort_values(ascending=False)[:10].index];"
+    "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['psnr'].sort_values(ascending=False)[:10].index];"
    ]
   },
   {
@@ -213,7 +229,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[d.get_product_picture(loc=x) for x in sim_grayscale_blur['rmse'].sort_values(ascending=True)[:10].index];"
+    "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['rmse'].sort_values(ascending=True)[:10].index];"
    ]
   },
   {
@@ -223,7 +239,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[d.get_product_picture(loc=x) for x in sim_grayscale_blur['sam'].sort_values(ascending=False)[:10].index];"
+    "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['sam'].sort_values(ascending=False)[:10].index];"
    ]
   },
   {
@@ -233,7 +249,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "[d.get_product_picture(loc=x) for x in sim_grayscale_blur['sre'].sort_values(ascending=False)[:10].index];"
+    "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['sre'].sort_values(ascending=False)[:10].index];"
    ]
   },
   {
@@ -245,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "[d.get_product_picture(loc=x) for x in sim_grayscale_blur['ssim'].sort_values(ascending=False)[:10].index];"
+    "[im_search.dataset.get_product_picture(loc=x) for x in sim_grayscale_blur['ssim'].sort_values(ascending=False)[:10].index];"
    ]
   },
   {
@@ -279,11 +295,11 @@
    "execution_count": null,
    "id": "927189dc",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
-    "(lambda x:[d.get_product_picture(loc=idx) for idx in x.sort_values(ascending=True)[:10].index])(sim_grayscale_blur['psnr'].rank(ascending=False));"
+    "(lambda x:[im_search.dataset.get_product_picture(loc=idx) for idx in x.sort_values(ascending=True)[:10].index])(sim_grayscale_blur['psnr'].rank(ascending=False));"
    ]
   },
   {
@@ -295,7 +311,7 @@
    },
    "outputs": [],
    "source": [
-    "(lambda x:[d.get_product_picture(loc=idx) for idx in x.sort_values(ascending=True)[:10].index])(all_merged.sort_values(ascending=True));"
+    "(lambda x:[im_search.dataset.get_product_picture(loc=idx) for idx in x.sort_values(ascending=True)[:10].index])(all_merged.sort_values(ascending=True));"
    ]
   }
  ],
