--- a/ml_aggcluster.ipynb
+++ b/ml_aggcluster.ipynb
@@ -46,7 +46,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run class_def.ipynb"
+    "%run class_DataSet.ipynb"
    ]
   },
   {
