--- a/exploration.ipynb
+++ b/exploration.ipynb
@@ -88,8 +88,6 @@
    "outputs": [],
    "source": [
     "import statsmodels.api as sm\n",
-    "from matplotlib import pyplot as plt\n",
-    "import seaborn as sns\n",
     "import os\n",
     "from pathlib import Path"
    ]
@@ -902,7 +900,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%run class_def.ipynb"
+    "%run class_DataSet.ipynb"
    ]
   },
   {
