--- a/class_Dataset.ipynb
+++ b/class_Dataset.ipynb
@@ -10,30 +10,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "1966c595",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run ipynb_setup.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e077b461",
    "metadata": {},
    "outputs": [],
@@ -48,7 +35,7 @@
     "\n",
     "from sklearn.impute import SimpleImputer\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "#from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.decomposition import PCA\n",
     "\n",
     "#from sklearn.cluster import KMeans"
@@ -64,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c907a8ea",
    "metadata": {
     "scrolled": true
@@ -75,8 +62,7 @@
     "\n",
     "class Dataset():\n",
     "\n",
-    "    # raw data\n",
-    "    csv = 'Sales Of Summer Cloths.csv'\n",
+    "    csv = 'Sales Of Summer Cloths.csv' # put csv into jupyter notebook root dir\n",
     "    \n",
     "    preselected_columns = [\n",
     "        'title',\n",
@@ -313,21 +299,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "baffa665",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nd=Dataset()\\nprint(d.raw.shape)\\nprint(d.df.shape)\\nprint(d.df_num.shape)\\nd.get_product_picture(loc=20);\\nd.get_product_pictures(locs=[20,21,22]);\\n'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "d=Dataset()\n",
