--- a/class_TokenSearch.ipynb
+++ b/class_TokenSearch.ipynb
@@ -44,22 +44,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "a17e201c",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run ipynb_setup.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "1966c595",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "%run class_Dataset.ipynb"
    ]
@@ -74,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "135010e7",
    "metadata": {},
    "outputs": [],
@@ -93,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "id": "fdb792c1",
    "metadata": {},
    "outputs": [],
@@ -156,7 +198,7 @@
     "        search_tokens      : List[TOKENS]  = None,\n",
     "        search_string      : SEARCH_STRING = None,\n",
     "        exact_search       : bool          = False,\n",
-    "        show_top_n         : int           = 5,\n",
+    "        plot_top_n         : int           = None,\n",
     "        verbose            : int           = 0, # show workings\n",
     "        ) -> pd.Series(dtype='int') :\n",
     "        '''\n",
@@ -164,32 +206,34 @@
     "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['harajuku','goth','sexy'],verbose=1) # test rare token logic\n",
     "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['kids','top','banana','bobby','henry'],verbose=0) # test bad search tokens\n",
     "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['kids','sandals'],verbose=1) # test\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],show_top_n=5,verbose=1) # test show_top_n\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],show_top_n=5,verbose=1) # test results snipping\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['banana'],show_top_n=5,verbose=1) # test results chat#\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal'],show_top_n=5,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='sandal red',show_top_n=5,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],show_top_n=5,exact_search=True,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,verbose=1) # test results chat\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',show_top_n=5,verbose=1) # test exact search\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],plot_top_n=5,verbose=1) # test plot_top_n\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['balloon'],plot_top_n=5,verbose=1) # test results snipping\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['banana'],plot_top_n=5,verbose=1) # test results chat#\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal'],plot_top_n=5,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['sandal','red'],plot_top_n=5,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='sandal red',plot_top_n=5,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],plot_top_n=5,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_tokens=['top','skinny','red'],plot_top_n=5,exact_search=True,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',plot_top_n=5,verbose=1) # test results chat\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',plot_top_n=5,verbose=1) # test exact search\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='exy',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "        #tokens_found_count(product_descriptor=make_product_descriptor(),search_string='top red',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
     "        '''\n",
     "        ###########################################################\n",
     "        # get search tokens\n",
     "        ###########################################################\n",
     "        if search_tokens is None:\n",
     "            search_tokens = self.tokenize_search_string(search_string=search_string) # strip them from search_string if search_tokens NOT provided\n",
-    "\n",
+    "        if verbose>1: print(f'search_tokens = {search_tokens}')\n",
+    "            \n",
     "        ###########################################################\n",
     "        # amend tokens to exactify search on request\n",
     "        ###########################################################\n",
     "        if exact_search:\n",
     "            search_tokens_orig = search_tokens\n",
     "            search_tokens      = self.exactify_search_tokens(search_tokens)\n",
+    "        if verbose>1: print(f'search_tokens = {search_tokens}')\n",
     "\n",
     "        ###########################################################\n",
     "        # figure out which tokens are found in product_descriptor\n",
@@ -200,30 +244,42 @@
     "                lambda x:bool(re.search(token,x,flags=re.IGNORECASE))\n",
     "            ) for token in search_tokens\n",
     "        ]\n",
+    "        if verbose>1: print(f'found_count_list = {[x.sum() for x in found_count_list]}')\n",
     "\n",
     "        # df of Trues/Falses\n",
     "        found_count_df = pd.concat(found_count_list,axis=1)\n",
     "        found_count_df.columns = search_tokens\n",
+    "        if verbose>1: print(f'found_count_df = {found_count_df}')\n",
     "\n",
     "        # series of found_count_series\n",
     "        found_count_series = found_count_df.sum(axis=1)\n",
     "        found_count_series.name = 'tokens_found_count'\n",
+    "        if verbose>1: print(f'found_count_series = {found_count_series}')\n",
     "\n",
     "        ###########################################################\n",
     "        # token rarity\n",
     "        ###########################################################\n",
     "        # count rarity of token - rare tokens should be valued more\n",
     "        token_found_count           = found_count_df.sum()\n",
+    "        if verbose>1: print('token_found_count');display(token_found_count)\n",
     "        token_rarity                = 1 - token_found_count / len(found_count_df) # rare tokens are valued more, only 1 instance (value ~= 1), 50% of products (value = 50%), 100% of products (value ~= 0)\n",
+    "        if verbose>0: print('token_rarity');display(token_rarity)\n",
     "        discounted_token_df         = found_count_df * token_rarity # impact token found bool with value of token (between 0 and 1)\n",
+    "        #return found_count_df,token_rarity\n",
+    "        #print(found_count_df.shape)\n",
+    "        #print(token_rarity.shape)\n",
+    "        if verbose>2: print(discounted_token_df)\n",
+    "        if verbose>2: print(discounted_token_df.max())\n",
+    "        #display(discounted_token_df)\n",
     "        discounted_token_series     = discounted_token_df.sum(axis=1)\n",
+    "        #display(discounted_token_series)\n",
     "        discounted_token_df.columns = ['discounted('+x+')' for x in discounted_token_df.columns] # rename df columns so result can exist in same df\n",
     "\n",
     "        ###########################################################\n",
     "        # give feedback if token not found\n",
     "        ###########################################################\n",
-    "        if verbose>1: print('token_found_count');display(token_found_count)\n",
     "        unmatched_tokens = token_found_count[token_found_count==0]\n",
+    "        if verbose>1: print(f'unmatched_tokens = {unmatched_tokens}')\n",
     "\n",
     "        # only give feedback if there are useless tokens\n",
     "        if len(unmatched_tokens)>0:\n",
@@ -246,21 +302,23 @@
     "        # make pretty return df\n",
     "        ###########################################################\n",
     "        # [ found count ] + [ which tokens found ] + [search string]\n",
+    "        #display(discounted_token_df.columns)\n",
+    "        #display(found_count_df.columns)\n",
     "        found_count_summary = pd.concat(\n",
     "            [\n",
-    "                discounted_token_series.to_frame('discounted(tokens matched)'),\n",
-    "                discounted_token_df,\n",
-    "                found_count_series.to_frame('tokens matched'),\n",
+    "                found_count_series.to_frame('tokens_matched'),\n",
     "                found_count_df,\n",
+    "                discounted_token_series.to_frame('discounted(tokens_matched)'),\n",
+    "                discounted_token_df,\n",
     "                self.product_descriptor.to_frame('product_descriptor')\n",
     "            ],\n",
     "            axis=1\n",
     "        )\n",
     "\n",
     "        # snip results table to stuff which has at least SOME match\n",
-    "        found_count_summary = found_count_summary[found_count_summary['tokens matched']>0]\n",
+    "        found_count_summary = found_count_summary[found_count_summary['tokens_matched']>0]\n",
     "        # sort on some metric\n",
-    "        found_count_summary = found_count_summary.sort_values(['tokens matched']+search_tokens,ascending=False)\n",
+    "        found_count_summary = found_count_summary.sort_values(['tokens_matched']+['discounted(tokens_matched)'],ascending=False)\n",
     "\n",
     "        ###########################################################\n",
     "        # results chat\n",
@@ -283,10 +341,10 @@
     "        ''' \n",
     "\n",
     "        ###########################################################\n",
-    "        # show_top_n results\n",
+    "        # plot_top_n results\n",
     "        ###########################################################\n",
-    "        if show_top_n and len(found_count_summary)>0:\n",
-    "            self.dataset.get_product_pictures(locs=found_count_summary.index[:show_top_n])\n",
+    "        if (plot_top_n is not None) and len(found_count_summary)>0:\n",
+    "            self.dataset.get_product_pictures(locs=found_count_summary.index[:plot_top_n])\n",
     "            plt.show()\n",
     "\n",
     "        ###########################################################\n",
@@ -295,12 +353,12 @@
     "        if verbose>0:\n",
     "            return found_count_summary.head(20)\n",
     "        else:\n",
-    "            return found_count_summary.head(show_top_n)"
+    "            return found_count_summary.head(plot_top_n)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 91,
    "id": "828d01d0",
    "metadata": {
     "scrolled": false
@@ -313,19 +371,23 @@
     "#ts.tokens_found_count(search_tokens=['harajuku','goth','sexy'],verbose=1) # test rare token logic\n",
     "#ts.tokens_found_count(search_tokens=['kids','top','banana','bobby','henry'],verbose=0) # test bad search tokens\n",
     "#ts.tokens_found_count(search_tokens=['kids','sandals'],verbose=1) # test\n",
-    "#ts.tokens_found_count(search_tokens=['balloon'],show_top_n=5,verbose=1) # test show_top_n\n",
-    "#ts.tokens_found_count(search_tokens=['balloon'],show_top_n=5,verbose=1) # test results snipping\n",
-    "#ts.tokens_found_count(search_tokens=['banana'],show_top_n=5,verbose=1) # test results chat#\n",
-    "#ts.tokens_found_count(search_tokens=['sandal'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['sandal','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='sandal red',show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],show_top_n=5,exact_search=True,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "ts.tokens_found_count(search_string='exy',show_top_n=5,verbose=1) # test exact search\n",
-    "#ts.tokens_found_count(search_string='exy',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#ts.tokens_found_count(search_tokens=['balloon'],plot_top_n=5,verbose=1) # test plot_top_n\n",
+    "#ts.tokens_found_count(search_tokens=['balloon'],plot_top_n=5,verbose=1) # test results snipping\n",
+    "#ts.tokens_found_count(search_tokens=['banana'],plot_top_n=5,verbose=1) # test results chat#\n",
+    "#ts.tokens_found_count(search_tokens=['sandal'],plot_top_n=5,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_tokens=['sandal','red'],plot_top_n=5,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_string='sandal red',plot_top_n=5,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],plot_top_n=5,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],plot_top_n=5,exact_search=True,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_string='top red',plot_top_n=5,verbose=1) # test results chat\n",
+    "#ts.tokens_found_count(search_string='top red',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#ts.tokens_found_count(search_string='exy',plot_top_n=5,verbose=1) # test exact search\n",
+    "#ts.tokens_found_count(search_string='exy',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#ts.tokens_found_count(search_string='top red',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#found_count_df,token_rarity=\n",
+    "#ts.tokens_found_count(search_string='hot banana skirt',plot_top_n=5,exact_search=True,verbose=1) # test exact search\n",
+    "#ts.tokens_found_count(search_string='skirt slim',plot_top_n=5,exact_search=False,verbose=0) # test exact search\n",
+    "ts.tokens_found_count(search_string='skirt slim',exact_search=False,verbose=0) # test exact search\n",
     "'''\n",
     "None"
    ]
