--- a/ipynb_setup.ipynb
+++ b/ipynb_setup.ipynb
@@ -40,9 +40,11 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "np.set_printoptions(precision=5, suppress=True)  # suppress scientific float notation\n",
+    "\n",
     "import pandas as pd\n",
-    "pd.set_option('display.max_rows', 500)\n",
-    "pd.set_option('max_colwidth',None)\n",
+    "pd.set_option('display.max_rows', 500) # show more rows\n",
+    "pd.set_option('max_colwidth',None) # wide columns\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "import seaborn as sns"
