--- a/class_Dataset.ipynb
+++ b/class_Dataset.ipynb
@@ -266,18 +266,33 @@
     "                \n",
     "            # plot\n",
     "            if plot_rows == 1:\n",
-    "                ax[curr_plotting_col].imshow(img) # dont need 2nd dimension for ax if only 1 row\n",
+    "                if plot_cols == 1:\n",
+    "                    ax.imshow(img) # dont need any dimension if only 1 plot\n",
+    "                else:\n",
+    "                    ax[curr_plotting_col].imshow(img) # dont need 2nd dimension for ax if only 1 row\n",
     "            else:\n",
     "                ax[curr_plotting_row,curr_plotting_col].imshow(img) # need 2nd dimension for ax if more than 1 row\n",
     "\n",
     "        # remove axes from ALL ax's\n",
     "        if plot_rows == 1:\n",
-    "            for curr_plotting_col in range(plot_cols):\n",
-    "                ax[curr_plotting_col].set_axis_off()\n",
+    "            if plot_cols == 1:\n",
+    "                ax.set_axis_off() # dont need 2nd dimension for ax if only 1 row\n",
+    "            else:\n",
+    "                for curr_plotting_col in range(plot_cols):\n",
+    "                    ax[curr_plotting_col].set_axis_off() # dont need 2nd dimension for ax if only 1 row\n",
     "        else:\n",
     "            for curr_plotting_row in range(plot_rows):\n",
     "                for curr_plotting_col in range(plot_cols):\n",
     "                    ax[curr_plotting_row,curr_plotting_col].set_axis_off()\n",
+    "\n",
+    "    # plot top n index from df\n",
+    "    def show_top_n(\n",
+    "        self,\n",
+    "        res : pd.DataFrame,\n",
+    "        n   : int = 5\n",
+    "        ) -> pd.DataFrame:\n",
+    "        if len(res)>0: self.get_product_pictures(locs=res.index[:n]);plt.show()\n",
+    "        return res\n",
     "\n",
     "    # REMOVE ME\n",
     "    def precompute_kmeans(\n",
@@ -309,7 +324,8 @@
     "print(d.raw.shape)\n",
     "print(d.df.shape)\n",
     "print(d.df_num.shape)\n",
-    "d.get_product_picture(loc=20);\n",
+    "d.get_produc\n",
+    "Nonet_picture(loc=20);\n",
     "d.get_product_pictures(locs=[20,21,22]);\n",
     "'''\n",
     "None"
