tldr commentary and closest neighbours
update commentary for new logic
consider close from ALL sources, not n closest from each source

--- a/class_NeighbourSearch.ipynb
+++ b/class_NeighbourSearch.ipynb
@@ -2,6 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "dab6305e",
+   "metadata": {},
+   "source": [
+    "# [TLDR] given several `home planets`, we simultaneously look outwards from all home worlds to find the `nearest` new `neighbouring planets` to our civilization\n",
+    "\n",
+    "- `home planets`\n",
+    "  - they denote products that match our search tokens\n",
+    "  - as they match on search tokens I consider them pretty good starting locations to look for new products from\n",
+    "  - these new products don't need to have token matches, just to be \"similar\"\n",
+    "- `neighbouring planets`\n",
+    "  - they denote products that didn't satisfy our original search token request\n",
+    "  - being \"close\" in numerical space is prob not a bad place to look for additional products\n",
+    "- `nearest`\n",
+    "  - this nearness in numerical sense, i.e. making use of numerical attributes in our dataset\n",
+    "  - numerical attributes deemed to be useful (in some sense) are cleaned up and normalized on which we can apply a numeric metric for nearness\n",
+    "    - nan's are imputed (to avoid throwing away products, imputed with population mean)\n",
+    "    - log-transformations are done to make the data more normalized\n",
+    "    - means are stripped and variances normalized to put all attributes into a similar scale (as the numeric metric is sensitive to scale)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -63,19 +85,24 @@
     "\n",
     "        self.dataset   = dataset\n",
     "        self.model     = NearestNeighbors().fit(self.dataset.df_num)\n",
-    "        \n",
+    "    \n",
+    "    # given list of locs, return a larger list of size `n` x len(locs) of locs that are closest to original locs\n",
     "    def get_n_nearest_from_locs(\n",
     "        self,\n",
-    "        n    : int,\n",
-    "        locs : List[int],\n",
+    "        n_nearest : int,\n",
+    "        locs      : List[int],\n",
     "        ):\n",
-    "        # return nearest_n neighbors from each element of locs \n",
+    "        # get nearest_n neighbors from each element of locs \n",
     "        distances,indices=self.model.kneighbors(\n",
     "            self.dataset.df_num.loc[locs],\n",
-    "            n_neighbors=n,\n",
+    "            n_neighbors = n_nearest,\n",
     "        )\n",
     "        \n",
-    "        return distances,indices"
+    "        # merge results into single vector\n",
+    "        nearest_results = pd.Series(np.ravel(distances),index=np.ravel(indices)).sort_values(ascending=True) # ordered from nearest to furthest, want globally nearest to origin family\n",
+    "        \n",
+    "        # return\n",
+    "        return nearest_results"
    ]
   },
   {
@@ -85,28 +112,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
     "neighbour_search=NeighbourSearch(dataset=Dataset())\n",
-    "distances,indices=neighbour_search.get_n_nearest_from_locs(n=5,locs=[0,1])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "57d238ec",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "1/(1+distances)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "08edcf8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "distances"
+    "neighbour_search.get_n_nearest_from_locs(n=5,locs=[0,1,2])\n",
+    "neighbour_search.get_n_nearest_from_locs(n=5,locs=[0,1,2,3,4,5,6])\n",
+    "'''\n",
+    "None"
    ]
   }
  ],
