tdlr commentary and output raw
update tdlr explanation and return raw data rather than just product_descriptor

--- a/class_TokenSearch.ipynb
+++ b/class_TokenSearch.ipynb
@@ -5,33 +5,27 @@
    "id": "2073bf9e",
    "metadata": {},
    "source": [
-    "# [TLDR] PROGRESSIVELY BUILT UP A TEXT SEARCH\n",
-    "- main points include\n",
+    "# [TLDR] match search tokens to some `product_descriptor` for each product\n",
     "\n",
-    "1. input `search_string` broken up (tokenized) on `\\W` special chars\n",
+    "- token matching seems most direct in grabbing home truths re what the customer is looking for\n",
     "\n",
-    "2. can look for tokens in \"product descriptor\" either by (a) exact matching tokens OR (b) simple matching of tokens\n",
-    "- exact matching\n",
-    "  - pros\n",
-    "    - avoids matching the token `red` in strings like `prediction`, i.e. avoids spurious matches\n",
-    "  - cons\n",
-    "    - tags are not all space separated so will not match anything, i.e. cannot find `white` in `whitesandalsbeach` \n",
-    "- simple matching\n",
-    "  - pros and cons are literally flip of that in exact matching, hard to say which is better\n",
+    "- upon beign given a `search_string`, simple regex magic\n",
+    "  - is done to partition it into `token`s\n",
+    "  - `token` matching to the `product_descriptor` can then be done either by\n",
+    "    - exact matching (with leading and trailing spaces) or \n",
+    "    - simply on presence (is good to catch poorly partitioned `tags`)\n",
+    "  - matching can also be\n",
+    "    - case sensitive or\n",
+    "    - case insenstive\n",
     "  \n",
-    "3. \"product descriptor\" is a merge of `title`, `title_orig`, `tags` and `product_color`\n",
-    "- all seem useful\n",
-    "- `title` and `title_orig` should be similar, one is French the other is English translation, who knows which is better, i.e. use both\n",
-    "- `tags` seem very useful but format isn't standardized, some are space separated, others `;` separated, others NOT separated\n",
-    "- `product_color` marginally useful\n",
-    "\n",
-    "4. given n tokens extracted from the `search_string`, trying to find matches for each token\n",
-    "- can rank products on the number of `n` token hits\n",
-    "- can also do a weighted token hit (based on the rarity of a token), i.e. rare tokens are stronger hits than common tokens, \"goth\" vs \"summer\"\n",
-    "\n",
-    "5. search tokens that receive 0 hits on the product list are useless, can give hints to the user to try different search strings\n",
-    "\n",
-    "6. top n text hits can be return along with their pictures as well for debugging / logic checks"
+    "- the `product_descriptor`\n",
+    "  - is built from all string like info that is predeemed to be interesting, namely\n",
+    "    - `title` (~ French description)\n",
+    "    - `title_orig` (~ English translation though as the translation could be wrong there is no harm in doubling up)\n",
+    "    - `tags` (~ non-standard category labelling of the product)\n",
+    "      - is sometimes partitioned with space and ;\n",
+    "      - and others appears as a continuous string (non-exact matching is better for this)\n",
+    "    - `product_color` (self explanatory)"
    ]
   },
   {
@@ -183,8 +177,8 @@
     "        ###########################################################\n",
     "        res = pd.concat(\n",
     "            [\n",
-    "                found_series.to_frame('found'),\n",
-    "                self.product_descriptor.to_frame('product_descriptor')\n",
+    "                self.product_descriptor.to_frame('product_descriptor'),\n",
+    "                self.dataset.df, #found_series.to_frame('found'),\n",
     "            ],\n",
     "            axis=1\n",
     "        )\n",
