--- a/class_Dataset.ipynb
+++ b/class_Dataset.ipynb
@@ -116,12 +116,12 @@
     "    # extract df of numeric features + populate nans\n",
     "    def df_numeric(\n",
     "        self,\n",
-    "        should_impute_nans      : bool = True,  # rather than trashing entry, populate missing ratings with population mean\n",
-    "        should_log_transform    : bool = True,  # make data distribution more normal like\n",
-    "        should_standard_scale   : bool = True,  # N(0,1) the data\n",
-    "        should_minmax_scale     : bool = False,\n",
+    "        should_impute_nans      : bool  = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "        should_log_transform    : bool  = True,  # make data distribution more normal like\n",
+    "        should_standard_scale   : bool  = True,  # N(0,1) the data\n",
+    "        should_minmax_scale     : bool  = False,\n",
     "        should_minmax_scale_abs : float = 2,\n",
-    "        should_pca              : bool = True,  # reduce dimensionality to speed up analysis\n",
+    "        should_pca              : bool  = True,  # reduce dimensionality to speed up analysis\n",
     "        should_pca_components   : float = 6,    # elbow / eyeballed optimal principal components to use\n",
     "        ) -> pd.DataFrame :\n",
     "        # strip\n",
@@ -153,7 +153,7 @@
     "        if should_pca:\n",
     "            pca = PCA(n_components=should_pca_components)\n",
     "            reduced = pca.fit_transform(df_num)\n",
-    "            df_num = pd.DataFrame(reduced)\n",
+    "            df_num = pd.DataFrame(reduced,index=df_num.index)\n",
     "            df_num.columns = ['ev'+str(x) for x in df_num.columns] # rename columns\n",
     "\n",
     "        # return\n",
@@ -324,9 +324,17 @@
     "print(d.raw.shape)\n",
     "print(d.df.shape)\n",
     "print(d.df_num.shape)\n",
-    "d.get_produc\n",
-    "Nonet_picture(loc=20);\n",
+    "d.get_product_picture(loc=20);\n",
     "d.get_product_pictures(locs=[20,21,22]);\n",
+    "d.df_numeric(\n",
+    "        should_impute_nans       = True,  # rather than trashing entry, populate missing ratings with population mean\n",
+    "        should_log_transform     = True,  # make data distribution more normal like\n",
+    "        should_standard_scale    = True,  # N(0,1) the data\n",
+    "        should_minmax_scale      = False,\n",
+    "        should_minmax_scale_abs  = 2,\n",
+    "        should_pca               = True,  # reduce dimensionality to speed up analysis\n",
+    "        should_pca_components     = 6,    # elbow / eyeballed optimal principal components to use\n",
+    ")\n",
     "'''\n",
     "None"
    ]
