--- a/class_TokenSearch.ipynb
+++ b/class_TokenSearch.ipynb
@@ -141,7 +141,7 @@
     "        return base.format(''.join(expr.format(w) for w in search_tokens))\n",
     "    #display(build_regex(ts.tokenize_search_string('RED banana')))\n",
     "    \n",
-    "    def tokens_found_count(\n",
+    "    def tokens_found(\n",
     "        self,\n",
     "        search_tokens      : List[TOKENS]  = None, # can give either search_string or search_tokens\n",
     "        search_string      : SEARCH_STRING = None, # can give either search_string or search_tokens\n",
@@ -162,30 +162,38 @@
     "\n",
     "        # compile regex\n",
     "        regex_str = self.build_regex_from_tokens(search_tokens)\n",
+    "        if verbose>1: print(f'regex_str = {regex_str}')\n",
     "        \n",
     "        ###########################################################\n",
     "        # apply regex to product_descriptor\n",
     "        ###########################################################\n",
     "        # returns a List[pd.Series(dtype=bool)], each list entry denoteing if nth token is found (exact or simple matching)\n",
+    "        if verbose>1: print(self.product_descriptor.shape)\n",
     "        if case_sensitive:\n",
     "            found_series = self.product_descriptor.str.contains(regex_str)\n",
     "        else:\n",
     "            found_series = self.product_descriptor.str.contains(regex_str,flags=re.IGNORECASE)\n",
     "        \n",
+    "        if verbose>1: print(found_series.shape)\n",
+    "        \n",
     "        ###########################################################\n",
     "        # make pretty return df\n",
     "        ###########################################################\n",
-    "        res = pd.concat(\n",
-    "            [\n",
-    "                self.product_descriptor.to_frame('product_descriptor'),\n",
-    "                self.dataset.df, #found_series.to_frame('found'),\n",
-    "            ],\n",
-    "            axis=1\n",
-    "        )\n",
-    "\n",
-    "        # snip results table to stuff which has at least SOME match\n",
-    "        res = res[found_series]\n",
+    "        if verbose > 0:\n",
+    "            # snip results table to stuff which has at least SOME match\n",
+    "            filter_me = pd.concat(\n",
+    "                [\n",
+    "                    self.product_descriptor.to_frame('product_descriptor'),\n",
+    "                    self.dataset.df, #found_series.to_frame('found'),\n",
+    "                ],\n",
+    "                axis=1\n",
+    "            )\n",
+    "        else:\n",
+    "            filter_me = self.dataset.df\n",
     "        \n",
+    "        # apply filter\n",
+    "        res = filter_me[found_series]\n",
+    "\n",
     "        ###########################################################\n",
     "        # return\n",
     "        ###########################################################\n",
@@ -207,39 +215,41 @@
     "'''\n",
     "d=Dataset()\n",
     "ts=TokenSearch(dataset=d)\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['summer','short'],verbose=1)) # basic logic\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['harajuku'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['harajuku','sexy'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['harajuku','goth','sexy'],verbose=1)) # test rare token logic\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['kids'],verbose=1)) # test\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['kids','ball'],verbose=1)) # test\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['balloon'],verbose=1)) # test show_top_n\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['balloon'],verbose=1)) # test results snipping\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['banana'],verbose=1)) # test results chat#\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['sandal'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['sandal','red'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='sandal red',verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['top','skinny','red'],verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_tokens=['top','skinny','red'],exact_match=True,verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='top red',verbose=1)) # test results chat\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='exy',verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='exy',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot skirt',exact_match=True,verbose=1)) # test non existent search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot skin',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot skinny',exact_match=True,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot skinny',exact_match=False,verbose=1)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='skirt slim',exact_match=False,verbose=0)) # test exact search\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='skirt slim',exact_match=False,verbose=0)) # no plotting\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='VANGULL',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='VANGULL banana',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='VANGULl',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='VANGUL',case_sensitive=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='VANGUL',case_sensitive=True,exact_match=True,verbose=1)) # test case sensitive\n",
-    "d.show_top_n(ts.tokens_found_count(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "#ts.tokens_found(search_string='harajuku')\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['summer','short'],verbose=1)) # basic logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','sexy'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','goth','sexy'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['kids'],verbose=1)) # test\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['kids','ball'],verbose=1)) # test\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test show_top_n\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test results snipping\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['banana'],verbose=1)) # test results chat#\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['sandal'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['sandal','red'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='sandal red',verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],exact_match=True,verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='exy',verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='exy',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skirt',exact_match=True,verbose=1)) # test non existent search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skin',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=False,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # no plotting\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULL',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULL banana',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULl',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,exact_match=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "ts.tokens_found(search_string='harajuku',verbose=2)\n",
     "'''\n",
     "None"
    ]
