--- a/text_search.ipynb
+++ b/text_search.ipynb
@@ -2,6 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7ae9ca86",
+   "metadata": {},
+   "source": [
+    "# [TLDR] trying to understand the text data in the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "97b80ce1",
+   "metadata": {},
+   "source": [
+    "# [LONGER VERSION]\n",
+    "- it seems 4 columns contain useful text information re each product\n",
+    "  - `title` = French descriptor\n",
+    "  - `title_orig` = English translated descriptor\n",
+    "  - `tags` = category string, not necessarily uniformly or well partitioned!\n",
+    "  - `product_color` = what it says on the tin"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad3b4e3a",
+   "metadata": {},
+   "source": [
+    "# [RESULT] ACCEPT, BUILD `PRODUCT_DESCRIPTOR` OFF THESE 4 COLUMNS"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "aba59712",
    "metadata": {},
    "source": [
@@ -143,42 +172,43 @@
    },
    "outputs": [],
    "source": [
-    "ts=TokenSearch(dataset=Dataset())\n",
-    "#ts.tokens_found_count(search_tokens=['summer','short'],verbose=1) # basic logic\n",
-    "#ts.tokens_found_count(search_tokens=['harajuku','goth','sexy'],verbose=1) # test rare token logic\n",
-    "#ts.tokens_found_count(search_tokens=['kids','top','banana','bobby','henry'],verbose=0) # test bad search tokens\n",
-    "#ts.tokens_found_count(search_tokens=['kids','sandals'],verbose=1) # test\n",
-    "#ts.tokens_found_count(search_tokens=['balloon'],show_top_n=5,verbose=1) # test show_top_n\n",
-    "#ts.tokens_found_count(search_tokens=['balloon'],show_top_n=5,verbose=1) # test results snipping\n",
-    "#ts.tokens_found_count(search_tokens=['banana'],show_top_n=5,verbose=1) # test results chat#\n",
-    "#ts.tokens_found_count(search_tokens=['sandal'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['sandal','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='sandal red',show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_tokens=['top','skinny','red'],show_top_n=5,exact_search=True,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,verbose=1) # test results chat\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "ts.tokens_found_count(search_string='exy',show_top_n=5,verbose=1) # test exact search\n",
-    "#ts.tokens_found_count(search_string='exy',show_top_n=5,exact_search=True,verbose=1) # test exact search\n",
-    "#ts.tokens_found_count(search_string='top red',show_top_n=5,exact_search=True,verbose=1) # test exact search"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "84db37b5",
-   "metadata": {},
-   "source": [
-    "### simple way to get description + tags to regex over"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60030fda",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "d.df[['title','title_orig','tags','product_color']]"
+    "d=Dataset()\n",
+    "ts=TokenSearch(dataset=d)\n",
+    "#ts.tokens_found(search_string='harajuku')\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['summer','short'],verbose=1)) # basic logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','sexy'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['harajuku','goth','sexy'],verbose=1)) # test rare token logic\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['kids'],verbose=1)) # test\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['kids','ball'],verbose=1)) # test\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test show_top_n\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['balloon'],verbose=1)) # test results snipping\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['banana'],verbose=1)) # test results chat#\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['sandal'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['sandal','red'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='sandal red',verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_tokens=['top','skinny','red'],exact_match=True,verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',verbose=1)) # test results chat\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='exy',verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='exy',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='top red',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skirt',exact_match=True,verbose=1)) # test non existent search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skin',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=True,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot skinny',exact_match=False,verbose=1)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # test exact search\n",
+    "d.show_top_n(ts.tokens_found(search_string='skirt slim',exact_match=False,verbose=0)) # no plotting\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULL',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULL banana',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGULl',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='VANGUL',case_sensitive=True,exact_match=True,verbose=1)) # test case sensitive\n",
+    "d.show_top_n(ts.tokens_found(search_string='hot',case_sensitive=True,verbose=1)) # test case sensitive\n",
+    "ts.tokens_found(search_string='harajuku',verbose=2)"
    ]
   }
  ],
